crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__sparse_big_fields_drop_from_previous_tail.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int, c : Int, d : Int, e : Int, f : Int }\nselect : Record -> int\nselect r = Builtin.addInteger (Builtin.unIData r.b)\n    (Builtin.addInteger (Builtin.unIData r.e) (Builtin.unIData r.f))\nmain = select { a = 1, b = 2, c = 3, d = 4, e = 5, f = 6 }\n"
---
--- core
let select#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int, _5 : Int } -> int = \r#4 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int, _5 : Int } -> let projection#5 : list Data = unListData r#4 in
let projection#6 : list Data = tailList projection#5 in
let projection#7 : Data = headList projection#6 in
let evaluated#13 : 'erased = unIData projection#7 in
let projection#8 : list Data = dropList 3 projection#6 in
let projection#9 : Data = headList projection#8 in
let evaluated#12 : 'erased = unIData projection#9 in
let projection#10 : list Data = tailList projection#8 in
let projection#11 : Data = headList projection#10 in
addInteger evaluated#13 (addInteger evaluated#12 (unIData projection#11)) in
let fromInt#3 : int -> Int = iData in
let main#1 : int = select#2 (listData (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (mkCons (fromInt#3 4) (mkCons (fromInt#3 5) (mkCons (fromInt#3 6) (con (list data) [])))))))) in
main#1
--- uplc
(program 1.1.0
  [(lam select_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        [select_2
          [(builtin listData)
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]]
                  [[(force (builtin mkCons)) [fromInt_3 (con integer 4)]]
                    [[(force (builtin mkCons)) [fromInt_3 (con integer 5)]]
                      [[(force (builtin mkCons)) [fromInt_3 (con integer 6)]] (con (list data) [])]]]]]]]]])
      (builtin iData)])
    (lam r_4
      [(lam projection_5
        [(lam projection_6
          [(lam projection_7
            [(lam evaluated_13
              [(lam projection_8
                [(lam projection_9
                  [(lam evaluated_12
                    [(lam projection_10
                      [(lam projection_11
                        [[(builtin addInteger) evaluated_13]
                          [[(builtin addInteger) evaluated_12] [(builtin unIData) projection_11]]])
                        [(force (builtin headList)) projection_10]])
                      [(force (builtin tailList)) projection_8]])
                    [(builtin unIData) projection_9]])
                  [(force (builtin headList)) projection_8]])
                [[(force (builtin dropList)) (con integer 3)] projection_6]])
              [(builtin unIData) projection_7]])
            [(force (builtin headList)) projection_6]])
          [(force (builtin tailList)) projection_5]])
        [(builtin unListData) r_4]])])
--- result
(con integer 13)
--- logs
[]
--- budget
cpu: 3305857, memory: 12812
