crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__trace_config_Silent_true.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : unit\nmain = trace \"hello\" (assert False)\n"
---
--- core
let main#1 : unit = case@Bool false of
  True -> ()
  False -> error in
main#1
--- uplc
(program 1.1.0
  [(lam main_1 main_1) (case (con bool False) (error) (con unit ()))])
--- result
error: ExplicitErrorTerm
--- logs
[]
--- budget
cpu: 100, memory: 100
